pre-commit for mdx

--- a/content/blog/2019-03-05-march-19-dvc-heartbeat.mdx
+++ b/content/blog/2019-03-05-march-19-dvc-heartbeat.mdx
@@ -19,7 +19,7 @@ tags:
   - DVC
 ---
 
-import { ExternalLink } from "../../src/components/external-link";
+import { ExternalLink } from '../../src/components/external-link';
 
 This is the very first issue of the DVC❤️Heartbeat. Every month we will be
 sharing our news, findings, interesting reads, community takeaways, and
@@ -43,7 +43,7 @@ checking.
   title="Data science is different now"
   description="Woman holding a balance, Vermeer 1664 What do you think of when you read the phrase 'data science'? It's probably some…"
   name="veekaybee.github.io"
-  picture="/uploads/images/2019-03-05/data-science-is-different-now.png" 
+  picture="/uploads/images/2019-03-05/data-science-is-different-now.png"
 />
 
 > What is becoming clear is that, in the late stage of the hype cycle, data
@@ -60,7 +60,7 @@ checking.
   title="Data Versioning"
   description="Productionizing machine learning/AI/data science is a challenge. Not only are the outputs of machine-learning…"
   name="emilygorcenski.com"
-  picture="/uploads/images/2019-03-05/data-versioning.jpeg" 
+  picture="/uploads/images/2019-03-05/data-versioning.jpeg"
 />
 
 > I want to explore how the degrees of freedom in versioning machine learning
@@ -76,7 +76,7 @@ checking.
   title="Reproducibility in Machine Learning | Computer Science Blog"
   description="The rise of Machine Learning has led to changes across all areas of computer science. From a very abstract point of…"
   name="blog.mi.hdm-stuttgart.de"
-  picture="/uploads/images/2019-03-05/reproducibility-in-machine-learning.jpeg" 
+  picture="/uploads/images/2019-03-05/reproducibility-in-machine-learning.jpeg"
 />
 
 > ...the objective of this post is not to philosophize about the dangers and
