--- a/content/blog/2019-04-18-april-19-dvc-heartbeat.mdx
+++ b/content/blog/2019-04-18-april-19-dvc-heartbeat.mdx
@@ -21,7 +21,7 @@ tags:
   - PyCon
 ---
 
-import { ExternalLink } from "../../src/components/external-link";
+import { ExternalLink } from '../../src/components/external-link';
 
 ## News and links
 
@@ -59,7 +59,7 @@ Here is a number of interesting reads that caught our eye:
   title="A walkthrough of DVC — codecentric AG Blog"
   description="This post is on how to systematially organize Machine Learning (ML) model development. A model’s performance improves…"
   name="blog.codecentric.de"
-  picture="/uploads/images/2019-04-18/walkthrough-of-dvc.png" 
+  picture="/uploads/images/2019-04-18/walkthrough-of-dvc.png"
 />
 
 A great article about using DVC with a quite advanced scenario and docker. If
@@ -74,7 +74,7 @@ comprehensive read on why you should do so right away.
   title="The state of machine learning operations"
   description="Contribute to EthicalML/state-of-mlops-2019 development by creating an account on GitHub."
   name="github.com"
-  picture="/uploads/images/2019-04-18/the-state-of-machine-learning-operations.jpeg" 
+  picture="/uploads/images/2019-04-18/the-state-of-machine-learning-operations.jpeg"
 />
 
 A short (only 8 minutes!) and inspiring talk by Alejandro Saucedo at FOSDEM.
@@ -91,7 +91,7 @@ of ML operations.
   title="Interview with Kaggle Grandmaster, Senior Computer Vision Engineer at Lyft: Dr. Vladimir I. Iglovikov"
   description="Part 24 of The series where I interview my heroes."
   name="hackernoon.com"
-  picture="/uploads/images/2019-04-18/interview-with-kaggle-grandmaster.jpeg" 
+  picture="/uploads/images/2019-04-18/interview-with-kaggle-grandmaster.jpeg"
 />
 
 > There is no way you will become Kaggle Master and not learn how to approach
