--- a/content/blog/2019-05-21-may-19-dvc-heartbeat.mdx
+++ b/content/blog/2019-05-21-may-19-dvc-heartbeat.mdx
@@ -24,7 +24,7 @@ tags:
   - Google Season of Docs
 ---
 
-import { ExternalLink } from "../../src/components/external-link";
+import { ExternalLink } from '../../src/components/external-link';
 
 ## News and links
 
@@ -84,7 +84,7 @@ our favorite links from the past month:
   title="Version Control For Machine Learning Projects"
   description="An interview with the creator of DVC about how it improves collaboration and reduces duplicate effort on data science…"
   name="pythonpodcast.com"
-  picture="/uploads/images/2019-05-21/version-control-for-your-machine-learning-projects.png" 
+  picture="/uploads/images/2019-05-21/version-control-for-your-machine-learning-projects.png"
 />
 
 > Version control has become table stakes for any software team, but for machine
@@ -106,7 +106,7 @@ our favorite links from the past month:
   title="Data version control with DVC. What do the authors have to say?"
   description="Data versioning is one of the most ignored features in data science projects, but that has to change. Here I’ll discuss…"
   name="towardsdatascience.com"
-  picture="/uploads/images/2019-05-21/data-version-control-with-dvc.png" 
+  picture="/uploads/images/2019-05-21/data-version-control-with-dvc.png"
 />
 
 - **[Why Git and Git-LFS is not enough to solve the Machine Learning Reproducibility crisis](https://towardsdatascience.com/why-git-and-git-lfs-is-not-enough-to-solve-the-machine-learning-reproducibility-crisis-f733b49e96e8)**
@@ -116,7 +116,7 @@ our favorite links from the past month:
   title="Why Git and Git-LFS is not enough to solve the Machine Learning Reproducibility crisis"
   description="Some claim the machine learning field is in a crisis due to software tooling that’s insufficient to ensure repeatable…"
   name="towardsdatascience.com"
-  picture="/uploads/images/2019-05-21/why-git-and-git-lfs-is-not-enough.jpeg" 
+  picture="/uploads/images/2019-05-21/why-git-and-git-lfs-is-not-enough.jpeg"
 />
 
 > With Git-LFS your team has better control over the data, because it is now
