--- a/content/blog/2019-06-26-june-19-dvc-heartbeat.mdx
+++ b/content/blog/2019-06-26-june-19-dvc-heartbeat.mdx
@@ -21,7 +21,7 @@ tags:
   - DVC
 ---
 
-import { ExternalLink } from "../../src/components/external-link";
+import { ExternalLink } from '../../src/components/external-link';
 
 ## News and links
 
@@ -54,7 +54,15 @@ activities was great! Last-minute accommodation cancellations, booth equipment
 delivery issues, and being late for our very own talk was not so great. Will be
 sharing more about it in a separate blogpost soon.
 
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/jkfh2PM5Sz8" frameborder="0" allowfullscreen></iframe></center>
+<center>
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/jkfh2PM5Sz8"
+    frameborder="0"
+    allowfullscreen
+  ></iframe>
+</center>
 
 Here is [Dmitry Petrov](https://twitter.com/FullStackML)’s PyCon
 [talk](https://www.youtube.com/watch?v=jkfh2PM5Sz8) and
@@ -81,7 +89,7 @@ resonates with our vision and ideas behind DVC. Highly recommended by DVC team!
   title="The Rise of DataOps (from the ashes of Data Governance)"
   description="Legacy Data Governance is broken in the ML era. Let’s rebuild it as an engineering discipline to drive…"
   name="towardsdatascience.com"
-  picture="/uploads/images/2019-06-26/the-rise-of-data-ops.png" 
+  picture="/uploads/images/2019-06-26/the-rise-of-data-ops.png"
 />
 
 > Legacy Data Governance is broken in the ML era. Let’s rebuild it as an
@@ -97,7 +105,7 @@ resonates with our vision and ideas behind DVC. Highly recommended by DVC team!
   title="First Impressions of Data Science Version Control (DVC)"
   description="A Powerful New Machine Learning Tool"
   name="medium.com"
-  picture="/uploads/images/2019-06-26/first-impressions-of-data-science-version-control.png" 
+  picture="/uploads/images/2019-06-26/first-impressions-of-data-science-version-control.png"
 />
 
 > In 2019, we tend to find organizations using a mix of git, Makefiles, ad hoc
@@ -122,7 +130,7 @@ resonates with our vision and ideas behind DVC. Highly recommended by DVC team!
   title="Becoming a machine learning company means investing in foundational technologies"
   description="Get expert knowledge on the tools and technologies you need to put your data strategies to work. Join us at the…"
   name="oreilly.com"
-  picture="/uploads/images/2019-06-26/becoming-a-machine-learning-company.jpeg" 
+  picture="/uploads/images/2019-06-26/becoming-a-machine-learning-company.jpeg"
 />
 
 > With an eye toward the growing importance of machine learning, we recently
