--- a/content/blog/2019-09-26-september-19-dvc-heartbeat.mdx
+++ b/content/blog/2019-09-26-september-19-dvc-heartbeat.mdx
@@ -22,7 +22,7 @@ tags:
   - Open Source Summit
 ---
 
-import { ExternalLink } from "../../src/components/external-link";
+import { ExternalLink } from '../../src/components/external-link';
 
 ## News and links
 
@@ -40,7 +40,7 @@ and save your spot now:
   title="Open-source tools to version control Machine Learning models and experiments"
   description="AI and ML are becoming an essential part of the engineering and data science everyday workflow. ML teams need new tools…"
   name="meetup.com"
-  picture="/uploads/images/2019-09-26/open-source-tools-to-version-control.png" 
+  picture="/uploads/images/2019-09-26/open-source-tools-to-version-control.png"
 />
 
 If you are not in SF on this date and happen to be in Europe — don’t miss the
@@ -90,7 +90,15 @@ discovered in July and August:
   on Twitter about versioning ML projects started by
   [Nathan Benaich](https://medium.com/@NathanBenaich).**
 
-<blockquote class="twitter-tweet" data-lang="en" data-dnt="true"><p lang="en" dir="ltr">🙏Question to ML friends: How do you go about version control for your ML projects (data, models, and intermediate steps in your data pipelines)? Have you built your own tools? Are using something open source? Or a SaaS? Or does this come bundled with your ML infra products? Thx!</p>&mdash; Nathan Benaich (@NathanBenaich) <a href="https://twitter.com/NathanBenaich/status/1151815916512010242?ref_src=twsrc%5Etfw">July 18, 2019</a></blockquote>
+<blockquote class="twitter-tweet" data-lang="en" data-dnt="true">
+  <p lang="en" dir="ltr">
+    🙏Question to ML friends: How do you go about version control for your ML
+    projects (data, models, and intermediate steps in your data pipelines)? Have
+    you built your own tools? Are using something open source? Or a SaaS? Or
+    does this come bundled with your ML infra products? Thx!
+  </p>
+  &mdash; Nathan Benaich (@NathanBenaich) <a href="https://twitter.com/NathanBenaich/status/1151815916512010242?ref_src=twsrc%5Etfw">July 18, 2019</a>
+</blockquote>
 
 - **[Our Machine Learning Workflow: DVC, MLFlow and Training in Docker Containers](https://medium.com/ixorthink/our-machine-learning-workflow-dvc-mlflow-and-training-in-docker-containers-5b9c80cdf804)
   by [Ward Van Laer](https://medium.com/@ward.vanlaer).**
@@ -102,7 +110,7 @@ discovered in July and August:
   title="Our Machine Learning Workflow: DVC, MLFlow and Training in Docker Containers"
   description="Googling for machine learning frameworks to version data, track python models etc.. I was surprised to see that these…"
   name="medium.com"
-  picture="/uploads/images/2019-09-26/our-machine-learning-workflow.jpeg" 
+  picture="/uploads/images/2019-09-26/our-machine-learning-workflow.jpeg"
 />
 
 - **[Using DVC to create an efficient version control system for data projects](https://medium.com/qonto-engineering/using-dvc-to-create-an-efficient-version-control-system-for-data-projects-96efd94355fe)
@@ -117,7 +125,7 @@ discovered in July and August:
   title="Using DVC to create an efficient version control system for data projects"
   description="At first we were looking for a tool to help us dealing with production data files such as trained machine learning…"
   name="medium.com"
-  picture="/uploads/images/2019-09-26/using-dvc-to-create-an-efficient-vcs.png" 
+  picture="/uploads/images/2019-09-26/using-dvc-to-create-an-efficient-vcs.png"
 />
 
 - **[Managing versioned machine learning datasets in DVC, and easily share ML projects with colleagues](https://techsparx.com/software-development/ai/dvc/versioning-example.html)
@@ -132,7 +140,7 @@ discovered in July and August:
   title="Managing versioned machine learning datasets in DVC, and easily share ML projects with colleagues"
   description="Software Development Artificial Intelligence Data Version Control (DVC) Managing versioned machine learning datasets in…"
   name="techsparx.com"
-  picture="/uploads/images/2019-09-26/managing-versioned-machine-learning-datasets.jpeg" 
+  picture="/uploads/images/2019-09-26/managing-versioned-machine-learning-datasets.jpeg"
 />
 
 - **[How to use data version control (dvc) in a machine learning project](https://towardsdatascience.com/how-to-use-data-version-control-dvc-in-a-machine-learning-project-a78245c0185)
@@ -148,7 +156,7 @@ discovered in July and August:
   title="How to use data version control (dvc) in a machine learning project"
   description="When working in a productive machine learning project you probably deal with a tone of data and several models. To keep…"
   name="towardsdatascience.com"
-  picture="/uploads/images/2019-09-26/how-to-use-data-version-control.jpeg" 
+  picture="/uploads/images/2019-09-26/how-to-use-data-version-control.jpeg"
 />
 
 - **[Version Control ML Model](https://towardsdatascience.com/version-control-ml-model-4adb2db5f87c)
@@ -162,7 +170,7 @@ discovered in July and August:
   title="Version Control ML Model"
   description="Machine Learning operations (let’s call it MLOps under the current buzzword pattern xxOps) are quite different from…"
   name="towardsdatascience.com"
-  picture="/uploads/images/2019-09-26/version-control-ml-model.png" 
+  picture="/uploads/images/2019-09-26/version-control-ml-model.png"
 />
 
 - **[Reflinks vs symlinks vs hard links, and how they can help machine learning projects](https://dev.to/robogeek/reflinks-vs-symlinks-vs-hard-links-and-how-they-can-help-machine-learning-projects-1cj4)
@@ -177,7 +185,7 @@ discovered in July and August:
   title="Reflinks vs symlinks vs hard links, and how they can help machine learning projects"
   description="Hard links and symbolic links have been available since time immemorial, and we use them all the time without even…"
   name="dev.to"
-  picture="/uploads/images/2019-09-26/reflinks-vs-symlinks-vs-hard-links.jpeg" 
+  picture="/uploads/images/2019-09-26/reflinks-vs-symlinks-vs-hard-links.jpeg"
 />
 
 - **[DVC dependency management — a guide](https://blog.codecentric.de/en/2019/08/dvc-dependency-management/)
@@ -195,7 +203,7 @@ discovered in July and August:
   title="DVC dependency management - a guide - codecentric AG Blog"
   description="This post is a follow-up to A walkthrough of DVC that deals with managing dependencies between DVC projects. In…"
   name="blog.codecentric.de"
-  picture="/uploads/images/2019-09-26/dvc-org.png" 
+  picture="/uploads/images/2019-09-26/dvc-org.png"
 />
 
 - **[Effective ML Teams — Lessons Learne](https://medium.com/@czeslaw.szubert/effective-ml-teams-lessons-learned-6a6e761bc283)
@@ -209,7 +217,7 @@ discovered in July and August:
   title="Effective ML Teams — Lessons Learned"
   description="Machine Learning and Artificial Intelligence has entered our everyday lives — from Virtual Assistants built into each…"
   name="medium.com"
-  picture="/uploads/images/2019-09-26/effective-ml-teams.jpeg" 
+  picture="/uploads/images/2019-09-26/effective-ml-teams.jpeg"
 />
 
 - **[Lessons learned from training a German Speech Recognition model](https://www.esentri.com/lessons-learned-from-training-a-german-speech-recognition-model/)
@@ -223,9 +231,8 @@ discovered in July and August:
   title="Lessons Learned from Training a German Speech Recognition Model - esentri AG"
   description="This post is the first of a two-part series. In this first part, I address learnings from a recent project in which I…"
   name="esentri.com"
-  picture="/uploads/images/2019-09-26/lessons-learned-from-training.jpeg" 
+  picture="/uploads/images/2019-09-26/lessons-learned-from-training.jpeg"
 />
-
 <hr />
 
 ## Discord gems
