--- a/content/blog/2019-11-05-october-19-dvc-heartbeat.mdx
+++ b/content/blog/2019-11-05-october-19-dvc-heartbeat.mdx
@@ -20,7 +20,7 @@ tags:
   - DVC
 ---
 
-import { ExternalLink } from "../../src/components/external-link";
+import { ExternalLink } from '../../src/components/external-link';
 
 ## News and links
 
@@ -35,7 +35,15 @@ it this year. Here are some of the highlights:
   tools to version control Machine Learning models and experiments. The
   recording is available now [here.](https://youtu.be/RHQXK7EC0jI)
 
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/RHQXK7EC0jI" frameborder="0" allowfullscreen></iframe></center>
+<center>
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/RHQXK7EC0jI"
+    frameborder="0"
+    allowfullscreen
+  ></iframe>
+</center>
 
 - [Getting ready for the Hacktoberfest](https://blog.dataversioncontrol.com/dvc-org-for-hacktoberfest-2019-ce5320151a0c)
   and having the whole team get together to pick up and label nice issues and be
@@ -62,8 +70,28 @@ it this year. Here are some of the highlights:
 - Seeing [Dmitry Petrov](https://twitter.com/FullStackML) being really happy one
   day:
 
-<blockquote class="twitter-tweet" data-lang="en" data-dnt="true" data-theme="light"><p lang="en" dir="ltr">.<a href="https://twitter.com/martinfowler?ref_src=twsrc%5Etfw">@martinfowler</a>&#39;s books and his website were always the source of programming wisdom 💎 His Refactoring book is the first book I recommend to developers.<br /><br />Now they write about ML lifecycle and automation. I’m especially excited because they use <a href="https://twitter.com/DVCorg?ref_src=twsrc%5Etfw">@DVCorg</a> that we’ve created. <a href="https://t.co/HwswZqjOsb">https://t.co/HwswZqjOsb</a></p>&mdash; Dmitry Petrov (@FullStackML) <a href="https://twitter.com/FullStackML/status/1169403554290814976?ref_src=twsrc%5Etfw">September 5, 2019</a></blockquote>
-
+<blockquote
+  class="twitter-tweet"
+  data-lang="en"
+  data-dnt="true"
+  data-theme="light"
+>
+  <p lang="en" dir="ltr">
+    .
+    <a href="https://twitter.com/martinfowler?ref_src=twsrc%5Etfw">
+      @martinfowler
+    </a>
+    &#39;s books and his website were always the source of programming wisdom 💎
+    His Refactoring book is the first book I recommend to developers.
+    <br />
+    <br />
+    Now they write about ML lifecycle and automation. I’m especially excited
+    because they use{' '}
+    <a href="https://twitter.com/DVCorg?ref_src=twsrc%5Etfw">@DVCorg</a> that
+    we’ve created. <a href="https://t.co/HwswZqjOsb">https://t.co/HwswZqjOsb</a>
+  </p>
+  &mdash; Dmitry Petrov (@FullStackML) <a href="https://twitter.com/FullStackML/status/1169403554290814976?ref_src=twsrc%5Etfw">September 5, 2019</a>
+</blockquote>
 <hr />
 
 We at [DVC.org](https://dvc.org) are so happy every time we discover an article
@@ -87,7 +115,7 @@ Here are some of the links that caught our eye past month:
   title="Continuous Delivery for Machine Learning"
   description="bio I am a consultant at ThoughtWorks Germany, where I am leading our data and machine learning activities. I enjoy…"
   name="martinfowler.com"
-  picture="/uploads/images/2019-11-05/continuous-delivery-for-machine-learning.png" 
+  picture="/uploads/images/2019-11-05/continuous-delivery-for-machine-learning.png"
 />
 
 - **[The Path to Identity Validation](https://medium.com/signaturit-tech-blog/the-path-to-identity-validation-2-3-4f698b2ffae9)
@@ -103,7 +131,7 @@ Here are some of the links that caught our eye past month:
   title="The Path to Identity Validation (2/3)"
   description="How to start your own machine learning project?"
   name="medium.com"
-  picture="/uploads/images/2019-11-05/the-path-to-identity-validation.jpeg" 
+  picture="/uploads/images/2019-11-05/the-path-to-identity-validation.jpeg"
 />
 
 - **Talk:
@@ -116,7 +144,15 @@ Here are some of the links that caught our eye past month:
 > increasingly difficult to manage and collaborate on projects that deal with
 > huge amounts of data and ML models apart from just source code.
 
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/4XpHk85_x0E" frameborder="0" allowfullscreen></iframe></center>
+<center>
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/4XpHk85_x0E"
+    frameborder="0"
+    allowfullscreen
+  ></iframe>
+</center>
 
 - **Podcast: TWIML Talk #295
   [Managing Deep Learning Experiments](https://twimlai.com/twiml-talk-295-managing-deep-learning-experiments-with-lukas-biewald/)
@@ -135,9 +171,8 @@ Here are some of the links that caught our eye past month:
   title="Managing Deep Learning Experiments with Lukas Biewald — Talk #295"
   description="Today we are joined by Lukas Biewald, CEO and Co-Founder of Weights & Biases. Lukas, previously CEO and Founder of…"
   name="twimlai.com"
-  picture="/uploads/images/2019-11-05/managing-deep-learning-experiments.jpeg" 
+  picture="/uploads/images/2019-11-05/managing-deep-learning-experiments.jpeg"
 />
-
 <hr />
 
 ## Discord gems
