--- a/content/blog/2019-12-14-november-19-dvc-heartbeat.mdx
+++ b/content/blog/2019-12-14-november-19-dvc-heartbeat.mdx
@@ -23,7 +23,7 @@ tags:
   - DVC
 ---
 
-import { ExternalLink } from "../../src/components/external-link";
+import { ExternalLink } from '../../src/components/external-link';
 
 The past few months have been so busy and full of great events! We love how
 involved our community is and can’t wait to share more with you:
@@ -64,7 +64,15 @@ involved our community is and can’t wait to share more with you:
   DVC-related topic — we are here to help, just
   [let us know](https://dvc.org/support)!**
 
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/Ipzf6oQqQpo" frameborder="0" allowfullscreen></iframe></center>
+<center>
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/Ipzf6oQqQpo"
+    frameborder="0"
+    allowfullscreen
+  ></iframe>
+</center>
 
 - Our own [Dmitry Petrov](https://twitter.com/FullStackML) went to Europe to
   speak at the
@@ -92,7 +100,7 @@ discovered in October and November:
   title="Deploy Machine Learning Models with Django"
   description="Version 1.0 (04/11/2019) Piotr Płoński The demand for Machine Learning (ML) applications is growing. Many resources…"
   name="deploymachinelearning.com"
-  picture="/uploads/images/2019-12-14/deploy-machine-learning-models.png" 
+  picture="/uploads/images/2019-12-14/deploy-machine-learning-models.png"
 />
 
 - **[How to Manage Your Machine Learning Workflow with DVC, Weights & Biases, and Docker](https://towardsdatascience.com/how-to-manage-your-machine-learning-workflow-with-dvc-weights-biases-and-docker-5529ea4e59e0)
@@ -107,7 +115,7 @@ discovered in October and November:
   title="How to Manage Your Machine Learning Workflow withDVC, Weights & Biases, and Docker"
   description="Managing a machine learning workflow is hard!"
   name="towardsdatascience.com"
-  picture="/uploads/images/2019-12-14/how-to-manage-your-machine-learning-workflow.jpeg" 
+  picture="/uploads/images/2019-12-14/how-to-manage-your-machine-learning-workflow.jpeg"
 />
 
 - **[Creating a solid Data Science development environment](https://towardsdatascience.com/creating-a-solid-data-science-development-environment-60df14ce3a34)
@@ -123,7 +131,7 @@ discovered in October and November:
   title="Creating a solid Data Science development environment"
   description="How to organize and replicate your development environment using Conda, Git, DVC, and JupyterLab."
   name="towardsdatascience.com"
-  picture="/uploads/images/2019-12-14/creating-solid-data-science-dev-env.png" 
+  picture="/uploads/images/2019-12-14/creating-solid-data-science-dev-env.png"
 />
 
 - **[Creating reproducible data science workflows with DVC](https://medium.com/y-data-stories/creating-reproducible-data-science-workflows-with-dvc-3bf058e9797b)
@@ -136,9 +144,8 @@ discovered in October and November:
   title="Creating reproducible data science workflows with DVC"
   description="“Getting started” tutorial into DVC to make a structure and order in your daily ML routine"
   name="medium.com"
-  picture="/uploads/images/2019-12-14/creating-reproducible-data-science-workflows.jpeg" 
+  picture="/uploads/images/2019-12-14/creating-reproducible-data-science-workflows.jpeg"
 />
-
 <hr />
 
 ## Discord gems
